fix tooltip typo

--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -117,7 +117,7 @@
                     </button>
                     <button *ngIf="canViewGears()"
                       class="px-2" type="button" nz-button nzType="default"
-                      nz-tooltip="详情" nzTooltipPlacement="top"
+                      nz-tooltip="更多操作" nzTooltipPlacement="top"
                       nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
                       <svg-icon iconPath="bi/three-dots"></svg-icon>
                     </button>
