--- a/projects/web/src/app/admin/privileges/list/list.component.html
+++ b/projects/web/src/app/admin/privileges/list/list.component.html
@@ -43,17 +43,17 @@
             (nzQueryParams)="loadData($event)">
             <thead>
               <tr class="sticky-top">
-                <th scope="col" class="text-end text-nowrap text-muted table-row-num-col">#</th>
-                <th scope="col" class="text-start text-nowrap text-muted">权限模块</th>
-                <th scope="col" class="text-start text-nowrap text-muted">权限名称</th>
-                <th scope="col" class="text-start text-nowrap text-muted">权限描述</th>
-                <th scope="col" class="text-center text-nowrap text-muted">是否必须</th>
-                <th scope="col" class="text-center text-nowrap text-muted table-action-col-3">操作</th>
+                <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+                <th scope="col" class="text-start text-nowrap">权限模块</th>
+                <th scope="col" class="text-start text-nowrap">权限名称</th>
+                <th scope="col" class="text-start text-nowrap">权限描述</th>
+                <th scope="col" class="text-center text-nowrap">是否必须</th>
+                <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
               </tr>
             </thead>
             <tbody>
               <tr *ngFor="let item of data; let i = index;">
-                <th scope="row" class="text-end text-muted">{{i+1+vm.searchModel.skip}}</th>
+                <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class="text-start">{{item.module}}</td>
                 <td class="text-start">{{item.name}}</td>
                 <td class="text-start">{{item.description}}</td>
