--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -85,7 +85,7 @@
                 <th scope="col" class="text-center">创建时间</th>
                 <th scope="col" class="text-center">最近登录</th>
                 <th scope="col" class="text-end">登录次数</th>
-                <th scope="col" class="text-center text-nowrap text-muted table-action-col-2">操作</th>
+                <th scope="col" class="text-center text-nowrap table-action-col-2">操作</th>
               </tr>
             </thead>
             <tbody>
