--- a/projects/web/src/app/account/user-info/user-info.component.html
+++ b/projects/web/src/app/account/user-info/user-info.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-3 mb-5">
   <div class="row">
-    <div class="col-2 text-end text-muted">
+    <div class="col-2 text-end">
       账户信息
     </div>
     <form class="col-8" nz-form #detailForm="ngForm" nzLayout="vertical">
@@ -98,7 +98,7 @@
     </form>
   </div>
   <div class="row">
-    <div class="col-2 text-end text-muted p-3">
+    <div class="col-2 text-end p-3">
       修改密码
     </div>
     <form class="mt-3 col-8" [formGroup]="pwdForm" nz-form nzLayout="vertical">
