--- a/projects/web/src/app/admin/audit-logs/list/list.component.html
+++ b/projects/web/src/app/admin/audit-logs/list/list.component.html
@@ -52,23 +52,23 @@
             (nzQueryParams)="loadData($event)">
             <thead>
               <tr class="sticky-top">
-                <th scope="col" class="text-end text-nowrap text-muted border-left-0">#</th>
-                <th scope="col" class="text-start text-nowrap text-muted">IP地址</th>
-                <th scope="col" class="text-start text-nowrap text-muted">主机名</th>
-                <th scope="col" class="text-start text-nowrap text-muted">请求地址</th>
-                <th scope="col" class="text-center text-nowrap text-muted">请求方法</th>
-                <th scope="col" class="text-center text-nowrap text-muted">用户名</th>
-                <th scope="col" class="text-center text-nowrap text-muted">开始时间</th>
-                <th scope="col" class="text-end text-nowrap text-muted">耗时</th>
-                <th scope="col" class="text-end text-nowrap text-muted">响应代码</th>
-                <th scope="col" class="text-start text-nowrap text-muted">控制器</th>
-                <th scope="col" class="text-start text-nowrap text-muted">动作名称</th>
-                <th scope="col" class="text-start text-nowrap text-muted">说明</th>
+                <th scope="col" class="text-end text-nowrap border-left-0">#</th>
+                <th scope="col" class="text-start text-nowrap">IP地址</th>
+                <th scope="col" class="text-start text-nowrap">主机名</th>
+                <th scope="col" class="text-start text-nowrap">请求地址</th>
+                <th scope="col" class="text-center text-nowrap">请求方法</th>
+                <th scope="col" class="text-center text-nowrap">用户名</th>
+                <th scope="col" class="text-center text-nowrap">开始时间</th>
+                <th scope="col" class="text-end text-nowrap">耗时</th>
+                <th scope="col" class="text-end text-nowrap">响应代码</th>
+                <th scope="col" class="text-start text-nowrap">控制器</th>
+                <th scope="col" class="text-start text-nowrap">动作名称</th>
+                <th scope="col" class="text-start text-nowrap">说明</th>
               </tr>
             </thead>
             <tbody *ngIf="(vm.data | async) as data">
               <tr *ngFor="let item of data; let i = index;">
-                <th scope="row" class="text-end text-muted">{{i+1+vm.searchModel.skip}}</th>
+                <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class="text-start">{{item.ip}}</td>
                 <td class="text-start">{{item.hostName}}</td>
                 <td class="text-start text-truncate" style="max-width: 20rem;" [title]="item.requestPath">{{item.requestPath}}</td>
