--- a/projects/web/src/app/admin/storages/list/list.component.html
+++ b/projects/web/src/app/admin/storages/list/list.component.html
@@ -31,17 +31,17 @@
             (nzQueryParams)="loadData($event)">
             <thead>
               <tr class="sticky-top">
-                <th scope="col" class="text-end text-nowrap text-muted table-row-num-col">#</th>
-                <th scope="col" class="text-start text-nowrap text-muted">别名</th>
-                <th scope="col" class="text-start text-nowrap text-muted">目录</th>
-                <th scope="col" class="text-center text-nowrap text-muted">是否只读</th>
-                <th scope="col" class="text-start text-nowrap text-muted">允许的角色</th>
-                <th scope="col" class="text-center text-nowrap text-muted table-action-col-3">操作</th>
+                <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+                <th scope="col" class="text-start text-nowrap">别名</th>
+                <th scope="col" class="text-start text-nowrap">目录</th>
+                <th scope="col" class="text-center text-nowrap">是否只读</th>
+                <th scope="col" class="text-start text-nowrap">允许的角色</th>
+                <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
               </tr>
             </thead>
             <tbody>
               <tr *ngFor="let item of data; let i = index;">
-                <th scope="row" class="text-end text-muted">{{i+1+vm.searchModel.skip}}</th>
+                <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class='text-start'>{{item.aliasName}}</td>
                 <td class='text-start'>{{item.rootFolder}}</td>
                 <td class='text-center'>{{item.readonly ? '是' : '否'}}</td>
