--- a/projects/web/src/app/common/header/header.component.html
+++ b/projects/web/src/app/common/header/header.component.html
@@ -1,18 +1,20 @@
-@if (ui.showSider) {
+@if (ui.showSider()) {
   <div nz-icon class="trigger px-3"
-    [nzType]="ui.siderCollapsed ? 'menu-unfold' : 'menu-fold'"
+    [nzType]="ui.siderCollapsed() ? 'menu-unfold' : 'menu-fold'"
     (click)="ui.toggleSider()">
   </div>
 }
 <div class="flex-grow-1">
   <nz-breadcrumb>
-    <nz-breadcrumb-item *ngFor="let item of ui.breadcrumbs">
-      @if (item.url) {
-        <a [routerLink]="item.url">{{item.label}}</a>
-      } @else {
-        {{item.label}}
-      }
-    </nz-breadcrumb-item>
+    @for (item of ui.breadcrumbs(); track item.url) {
+      <nz-breadcrumb-item>
+        @if (item.url) {
+          <a [routerLink]="item.url">{{item.label}}</a>
+        } @else {
+          {{item.label}}
+        }
+      </nz-breadcrumb-item>
+    }
   </nz-breadcrumb>
 </div>
 <div>
