--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -5,7 +5,7 @@
         <form nz-form nzLayout="vertical" #loginForm="ngForm" (submit)="login()" method="post">
           <nz-form-item>
             <nz-form-label nzFor="username" nzRequired>用户名</nz-form-label>
-            <nz-form-control>
+            <nz-form-control [nzHasFeedback]="true">
               <input nz-input nzSize="large" type="text" id="username" name="username"
                 placeholder="请输入用户名 ..." [(ngModel)]="model.userName"
                 required autocomplete="username"
@@ -14,13 +14,26 @@
           </nz-form-item>
           <nz-form-item>
             <nz-form-label nzFor="password" nzRequired>密码</nz-form-label>
-            <nz-form-control>
+            <nz-form-control [nzHasFeedback]="true">
               <input nz-input nzSize="large" type="password" name="password"
                 placeholder="请输入密码 ..." required id="password"
                 [(ngModel)]="model.password"
                 autocomplete="new-password"
                 (keyup)="passwordKeyUp($event, loginForm)"
               />
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item class="captcha-item">
+            <nz-form-label nzFor="captcha" nzRequired>验证码</nz-form-label>
+            <nz-form-control [nzHasFeedback]="true">
+              <nz-input-group [nzAddOnAfter]="captchaImageTpl" nzSize="large">
+                <input nz-input nzSize="large" id="captcha" name="captcha"
+                  [(ngModel)]="model.captcha" placeholder="请输入验证码..." required />
+              </nz-input-group>
+              <ng-template #captchaImageTpl>
+                <img class="captcha" class="clickable" [src]="captchaImageUrl()" alt="点击刷新验证码"
+                  (click)="updateCaptcha()" nz-tooltip="点击刷新验证码" />
+              </ng-template>
             </nz-form-control>
           </nz-form-item>
           <nz-form-item>
