--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -2,59 +2,62 @@
   <div class="row">
     <div class="col col-login mx-auto">
       <nz-card nzTitle="登录您的账户">
-        <form nz-form nzLayout="vertical" #loginForm="ngForm" (submit)="login()" method="post">
-          <nz-form-item>
-            <nz-form-label nzFor="username" nzRequired>用户名</nz-form-label>
-            <nz-form-control [nzHasFeedback]="true">
-              <input nz-input nzSize="large" type="text" id="username" name="username"
-                placeholder="请输入用户名 ..." [(ngModel)]="model.userName"
-                required autocomplete="username"
-              />
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label nzFor="password" nzRequired>密码</nz-form-label>
-            <nz-form-control [nzHasFeedback]="true">
-              <input nz-input nzSize="large" type="password" name="password"
-                placeholder="请输入密码 ..." required id="password"
-                [(ngModel)]="model.password"
-                autocomplete="new-password"
-                (keyup)="passwordKeyUp($event, loginForm)"
-              />
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item class="captcha-item">
-            <nz-form-label nzFor="captcha" nzRequired>验证码</nz-form-label>
-            <nz-form-control [nzHasFeedback]="true">
-              <nz-input-group [nzAddOnAfter]="captchaImageTpl" nzSize="large">
-                <input nz-input nzSize="large" id="captcha" name="captcha"
-                  [(ngModel)]="model.captcha" placeholder="请输入验证码..." required />
-              </nz-input-group>
-              <ng-template #captchaImageTpl>
-                <img class="captcha" class="clickable" [src]="captchaImageUrl()" alt="点击刷新验证码"
-                  (click)="updateCaptcha()" nz-tooltip="点击刷新验证码" />
-              </ng-template>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <button nz-button nzType="primary" nzSize="large" nzBlock
-              [disabled]="(!loginForm.valid) || loading"
-              type="button" (click)="login()">
-              @if (loading) {
-                <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 登录中 ...
-              } @else {
-                登录
-              }
-            </button>
-          </nz-form-item>
-          @if (message | async; as msg) {
-            <nz-alert class="login-error-alert" nzType="error"
-              [nzCloseable]="true" (nzOnClose)="clearMessage()"
-              [nzShowIcon]="true"
-              [nzMessage]="msg">
-            </nz-alert>
-          }
-        </form>
+        @if (ui.showLoginForm()) {
+          <form nz-form nzLayout="vertical" #loginForm="ngForm" (submit)="login()" method="post">
+            <nz-form-item>
+              <nz-form-label nzFor="username" nzRequired>用户名</nz-form-label>
+              <nz-form-control [nzHasFeedback]="true">
+                <input nz-input nzSize="large" type="text" id="username" name="username"
+                  placeholder="请输入用户名 ..." [(ngModel)]="model.userName"
+                  required autocomplete="username"
+                />
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+              <nz-form-label nzFor="password" nzRequired>密码</nz-form-label>
+              <nz-form-control [nzHasFeedback]="true">
+                <input nz-input nzSize="large" type="password" name="password"
+                  placeholder="请输入密码 ..." required id="password"
+                  [(ngModel)]="model.password" autocomplete="new-password"
+                />
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item class="captcha-item">
+              <nz-form-label nzFor="captcha" nzRequired>验证码</nz-form-label>
+              <nz-form-control [nzHasFeedback]="true">
+                <nz-input-group [nzAddOnAfter]="captchaImageTpl" nzSize="large">
+                  <input nz-input nzSize="large" id="captcha" name="captcha"
+                    [(ngModel)]="model.captcha" placeholder="请输入验证码..." required
+                    (keyup)="passwordKeyUp($event, loginForm)"
+                  />
+                </nz-input-group>
+                <ng-template #captchaImageTpl>
+                  <img class="captcha" class="clickable" [src]="captchaImageUrl()" alt="点击刷新验证码"
+                    (click)="updateCaptcha()" nz-tooltip="点击刷新验证码" />
+                </ng-template>
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+              <button nz-button nzType="primary" nzSize="large" nzBlock
+                [disabled]="(!loginForm.valid) || loading()"
+                type="button" (click)="login()">
+                @if (loading()) {
+                  <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 登录中 ...
+                } @else {
+                  登录
+                }
+              </button>
+            </nz-form-item>
+            @let msg = message();
+            @if (msg) {
+              <nz-alert class="login-error-alert" nzType="error"
+                [nzCloseable]="true" (nzOnClose)="clearMessage()"
+                [nzShowIcon]="true"
+                [nzMessage]="msg">
+              </nz-alert>
+            }
+          </form>
+        }
       </nz-card>
     </div>
   </div>
