--- a/projects/web/src/app/account/user-info/user-info.component.html
+++ b/projects/web/src/app/account/user-info/user-info.component.html
@@ -53,9 +53,9 @@
         <div class="col">
           <nz-form-item>
             <nz-form-label nzFor="dateOfBirth">出生日期</nz-form-label>
-            <nz-form-item>
+            <nz-form-control>
               <nz-date-picker id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dob"/>
-            </nz-form-item>
+            </nz-form-control>
           </nz-form-item>
         </div>
         <div class="col">
