date picker input only.

--- a/projects/web/src/app/account/user-info/user-info.component.html
+++ b/projects/web/src/app/account/user-info/user-info.component.html
@@ -54,7 +54,7 @@
           <nz-form-item>
             <nz-form-label nzFor="dateOfBirth">出生日期</nz-form-label>
             <nz-form-control>
-              <nz-date-picker id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dob"/>
+              <nz-date-picker id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dob" [nzInputReadOnly]="true"/>
             </nz-form-control>
           </nz-form-item>
         </div>
