--- a/projects/web/src/app/admin/users/lock/lock.component.html
+++ b/projects/web/src/app/admin/users/lock/lock.component.html
@@ -20,6 +20,7 @@
         <nz-date-picker class="w-100" id="lockoutEnd" nzId="lockoutEnd" nzFormat="yyyy-MM-dd"
           [nzAllowClear]="false" [nzDisabledDate]="disabledDate"
           placeholder="请选择锁定截止时间 ..." formControlName="lockoutEnd"
+          [nzInputReadOnly]="true"
           required />
       </nz-form-control>
     </nz-form-item>
