--- a/projects/web/src/app/account/token-detail/token-detail.component.html
+++ b/projects/web/src/app/account/token-detail/token-detail.component.html
@@ -49,7 +49,7 @@
       <nz-form-control>
         <nz-date-picker class="w-100" id="expiresAt" nzId="expiresAt" name="expiresAt"
           nzPlaceHolder="设置凭证的过期时间，否者将永不过期。" [(ngModel)]="tokenExpiresAt"
-          [nzDisabledDate]="disabledDate"
+          [nzDisabledDate]="disabledDate" [nzInputReadOnly]="true"
           [nzDisabled]="!editable" />
       </nz-form-control>
     </nz-form-item>
