--- a/projects/web/src/app/admin/users/detail/detail.component.html
+++ b/projects/web/src/app/admin/users/detail/detail.component.html
@@ -117,7 +117,7 @@
           <nz-form-control>
             <nz-date-picker class="w-100" id="dateOfBirth" nzId="dateOfBirth" name="dateOfBirth"
               nzPlaceHolder="请选择出生日期 ..." [(ngModel)]="dateOfBirthDate"
-              [nzDisabled]="!editable"></nz-date-picker>
+              [nzDisabled]="!editable" [nzInputReadOnly]="true"/>
           </nz-form-control>
         </nz-form-item>
       </div>
