--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
@@ -4,7 +4,7 @@
       [class.text-white]="theme === 'dark'"
       [class.text-black]="theme === 'light'">
       <span class="logo-icon">
-        <svg-icon iconClass="bi bi-xxl" [iconPath]="root.icon"></svg-icon>
+        <svg-icon iconClass="bi bi-xxl" [iconPath]="root.icon!" />
       </span>
       <span class="logo-title user-select-none ps-2 fs-5 text-nowrap text-truncate"
         [class.d-none]="collapsed">{{root.title}}</span>
