--- a/projects/web/src/app/admin/organize-units/list/list.component.html
+++ b/projects/web/src/app/admin/organize-units/list/list.component.html
@@ -10,13 +10,13 @@
               type="button" nz-button nzType="primary"
               (click)="showDetail('0', true)"
             >
-              <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建组织单元
+              <svg-icon class="me-1" iconPath="bi/plus" /> 新建组织单元
             </button>
             <button
               type="button" nz-button nzType="default"
               (click)="loadData()"
             >
-              <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
+              <svg-icon class="me-1" iconPath="bi/arrow-repeat" /> 刷新
             </button>
           </nz-button-group>
         </ng-template>
@@ -50,7 +50,7 @@
                         class="px-2" nz-button nzType="default"
                         nz-tooltip="详情" nzTooltipPlacement="top"
                         (click)="showDetail(item.id, false)">
-                        <svg-icon iconPath="bi/info-square"></svg-icon>
+                        <svg-icon iconPath="bi/info-square" />
                       </button>
                       <button
                         *ngIf="info.privileges['app_organize_units.update']"
@@ -58,7 +58,7 @@
                         nz-tooltip="编辑" nzTooltipPlacement="top"
                         (click)="showDetail(item.id, true)"
                       >
-                        <svg-icon iconPath="bi/pencil-square"></svg-icon>
+                        <svg-icon iconPath="bi/pencil-square" />
                       </button>
                       <button
                         *ngIf="info.privileges['app_organize_units.delete']"
@@ -67,7 +67,7 @@
                         [disabled]="item.children && item.children.length > 0"
                         (click)="delete(item.id)"
                       >
-                        <svg-icon iconPath="bi/trash"></svg-icon>
+                        <svg-icon iconPath="bi/trash" />
                       </button>
                     </nz-button-group>
                   </td>
