--- a/projects/web/src/app/admin/roles/list/list.component.html
+++ b/projects/web/src/app/admin/roles/list/list.component.html
@@ -8,11 +8,11 @@
             <button *ngIf="info.privileges['app_roles.create']"
               type="button" nz-button nzType="primary"
               (click)="showDetail('0', true)">
-              <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建角色
+              <svg-icon class="me-1" iconPath="bi/plus" /> 新建角色
             </button>
             <button type="button" nz-button nzType="default"
               (click)="vm.search()">
-              <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
+              <svg-icon class="me-1" iconPath="bi/arrow-repeat" /> 刷新
             </button>
           </nz-button-group>
         </ng-template>
@@ -54,26 +54,26 @@
                       class="px-2" type="button" nz-button nzType="default"
                       nz-tooltip="详情" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, false)">
-                      <svg-icon iconPath="bi/info-square"></svg-icon>
+                      <svg-icon iconPath="bi/info-square" />
                     </button>
                     <button *ngIf="info.privileges['app_roles.update']"
                       class="px-2" type="button" nz-button nzType="default"
                       nz-tooltip="编辑" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, true)">
-                      <svg-icon iconPath="bi/pencil-square"></svg-icon>
+                      <svg-icon iconPath="bi/pencil-square" />
                     </button>
                     <button *ngIf="info.privileges['app_roles.read_role_privileges']"
                       class="px-2" type="button" nz-button nzType="default"
                       nz-tooltip="角色权限" nzTooltipPlacement="top"
                       (click)="showPrivileges(item)">
-                      <svg-icon iconPath="bi/shield-lock"></svg-icon>
+                      <svg-icon iconPath="bi/shield-lock" />
                     </button>
                     <button *ngIf="info.privileges['app_roles.delete']"
                       class="px-2" type="button" nz-button nzType="default"
                       nz-tooltip="删除" nzTooltipPlacement="top"
                       (click)="delete(item.id)"
                       [disabled]="$any(item.userCount) > 0">
-                      <svg-icon iconPath="bi/trash"></svg-icon>
+                      <svg-icon iconPath="bi/trash" />
                     </button>
                   </nz-button-group>
                 </td>
