--- a/projects/web/src/app/admin/roles/privilege/privilege.component.html
+++ b/projects/web/src/app/admin/roles/privilege/privilege.component.html
@@ -3,7 +3,7 @@
   <ng-template #toolsTpl>
     <nz-button-group>
       <button type="button" nz-button nzType="default" (click)="close()">
-        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 确定
+        <svg-icon class="me-1" iconPath="bi/check" /> 确定
       </button>
     </nz-button-group>
   </ng-template>
