--- a/projects/web/src/app/admin/users/lock/lock.component.html
+++ b/projects/web/src/app/admin/users/lock/lock.component.html
@@ -6,10 +6,10 @@
       <button *ngIf="info.privileges['app_users.lock']"
         type="button" type="button" nz-button nzType="primary"
         [disabled]="!lockForm.valid" (click)="save()">
-        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
+        <svg-icon class="me-1" iconPath="bi/check" /> 保存
       </button>
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+        <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
     </nz-button-group>
   </ng-template>
