--- a/projects/web/src/app/admin/users/roles/roles.component.html
+++ b/projects/web/src/app/admin/users/roles/roles.component.html
@@ -5,10 +5,10 @@
   <ng-template #toolsTpl>
     <nz-button-group>
       <button type="button" nz-button nzType="primary" (click)="save()">
-        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 确定
+        <svg-icon class="me-1" iconPath="bi/check" /> 确定
       </button>
       <button type="button" nz-button nzType="default"(click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+        <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
     </nz-button-group>
   </ng-template>
