--- a/projects/web/src/app/account/token-detail/token-detail.component.html
+++ b/projects/web/src/app/account/token-detail/token-detail.component.html
@@ -5,10 +5,10 @@
     <nz-button-group>
       <button type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
+        <svg-icon class="me-1" iconPath="bi/check" /> 保存
       </button>
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+        <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
     </nz-button-group>
   </ng-template>
@@ -37,7 +37,7 @@
         <ng-template #refreshValueTpl>
           <button class="px-2" type="button" nzSearch nz-button nzType="default"
             nz-tooltip="刷新凭证值" (click)="newTokenValue()">
-            <svg-icon iconPath="bi/arrow-repeat"></svg-icon>
+            <svg-icon iconPath="bi/arrow-repeat" />
           </button>
         </ng-template>
       </nz-input-group>
@@ -110,13 +110,13 @@
     <button *ngIf="editable"
       class="float-start ms-4" type="button" nz-button nzType="primary"
       (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
+      <svg-icon class="me-1" iconPath="bi/check" /> 保存
     </button>
   </ng-template>
   <ng-template #cancelTpl>
     <button class="float-end me-4" type="button" nz-button nzType="default"
       (click)="cancel()">
-      <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+      <svg-icon class="me-1" iconPath="bi/x" /> 取消
     </button>
   </ng-template>
 </nz-card>
