--- a/projects/web/src/app/admin/nav-items/detail/detail.component.html
+++ b/projects/web/src/app/admin/nav-items/detail/detail.component.html
@@ -7,10 +7,10 @@
       <button *ngIf="info.privileges['app_nav_items.update'] && editable"
         type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
+        <svg-icon class="me-1" iconPath="bi/check" /> 保存
       </button>
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+        <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
     </nz-button-group>
   </ng-template>
@@ -101,7 +101,7 @@
               <ng-container *ngIf="editable && info.privileges['app_storages.read_folder_content']">
                 <button class="px-2" type="button" nz-button nzType="default" nzSearch
                   nz-tooltip="从图标库查找图标" (click)="showIconDialog()">
-                  <svg-icon iconPath="bi/search"></svg-icon>
+                  <svg-icon iconPath="bi/search" />
                 </button>
               </ng-container>
             </ng-template>
@@ -139,13 +139,13 @@
     <button *ngIf="info.privileges['app_nav_items.update'] && editable"
       class="float-start ms-4" type="button" nz-button nzType="primary"
       (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
+      <svg-icon class="me-1" iconPath="bi/check" /> 保存
     </button>
   </ng-template>
   <ng-template #cancelTpl>
     <button class="float-end me-4" type="button" nz-button nzType="default"
       (click)="cancel()">
-      <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+      <svg-icon class="me-1" iconPath="bi/x" /> 取消
     </button>
   </ng-template>
 </nz-card>
