--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.html
@@ -26,7 +26,7 @@
                   <span title class="d-inline-flex align-items-center">
                     @if (data.level === 1) {
                       <span nz-icon>
-                        <svg-icon [iconPath]="menu.icon || 'question-circle'"></svg-icon>
+                        <svg-icon [iconPath]="menu.icon || 'question-circle'" />
                       </span>
                     }
                     <span>{{ menu.title }}</span>
@@ -49,7 +49,7 @@
                   [nzTooltipTitle]="(collapsed && data.level === 1) ? menu.title : null">
                   @if (data.level === 1) {
                     <span nz-icon>
-                      <svg-icon [iconPath]="menu.icon || 'bi/question-circle'"></svg-icon>
+                      <svg-icon [iconPath]="menu.icon || 'bi/question-circle'" />
                     </span>
                   }
                   <span>{{ menu.title }}</span>
