--- a/projects/web/src/app/common/storage-browser/storage-browser.component.html
+++ b/projects/web/src/app/common/storage-browser/storage-browser.component.html
@@ -5,7 +5,7 @@
       <nz-button-group class="ms-1" nzSize="small">
         <button type="button" nz-button nzType="default" nzSize="small"
           (click)="getFolderContentByPath('.')">
-          <svg-icon class="me-1" iconPath="bi/house"></svg-icon> {{params.alias}}
+          <svg-icon class="me-1" iconPath="bi/house" /> {{params.alias}}
         </button>
         <button *ngFor="let bc of breadcrumbs"
           type="button" nz-button nzType="default" nzSize="small"
@@ -23,11 +23,11 @@
       <nz-button-group *nzSpaceItem>
         <button type="button" nz-button nzType="primary"
           (click)="ok()">
-          <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 确定
+          <svg-icon class="me-1" iconPath="bi/check" /> 确定
         </button>
         <button type="button" nz-button nzType="default"
           (click)="cancel()">
-          <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
+          <svg-icon class="me-1" iconPath="bi/x" /> 取消
         </button>
       </nz-button-group>
     </nz-space>
@@ -39,7 +39,7 @@
       [nz-tooltip]="item.name"
       (dblclick)="getFolderContent(item)" (click)="setSelectedItem(item)">
       <div [class]="getFolderItemClass(item)">
-        <svg-icon [iconPath]="getFolderItemIconPath(item)" iconClass="bi bi-2x"></svg-icon>
+        <svg-icon [iconPath]="getFolderItemIconPath(item)" iconClass="bi bi-2x" />
       </div>
       <div class="mt-1 folder-item-name text-truncate user-select-none">
         {{ item.type === 'folder' ? item.name : item.name + '.' + item.ext }}
